--- a/style.css
+++ b/style.css
@@ -16,3 +16,57 @@
   font-family: 'Roboto';
   box-sizing: border-box;
 }
+
+body {
+  background-color: var(--main-background);
+}
+
+a {
+  text-decoration: none;
+}
+
+.navigation {
+  display: flex;
+  text-align: center;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.navigation ul {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  gap: 50px;
+}
+
+.navigation ul li a {
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+.navigation input {
+  border: none;
+  background-image: url(./assets/icon-search.svg);
+  background-repeat: no-repeat;
+  background-position: 2px center;
+  padding-left: 30px;
+  appearance: none;
+  margin-left: 10px;
+}
+
+main {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.card {
+  width: 360px;
+  background-color: var(--main-background);
+}
+
+.card h1 {
+  font-weight: 700;
+  font-size: 3.75rem;
+}
