--- a/style.css
+++ b/style.css
@@ -52,6 +52,13 @@ a {
   appearance: none;
   margin-left: 10px;
   height: 30px;
+  border-radius: 3px;
+}
+
+.navigation input:focus {
+  appearance: none;
+  border: none;
+  outline: 2px solid black;
 }
 
 main {
@@ -109,6 +116,7 @@ main {
   display: flex;
   align-items: center;
   gap: 20px;
+  margin-bottom: 20px;
 }
 
 .galery .navGalery img {
@@ -118,4 +126,50 @@ main {
 
 footer {
   position: absolute;
+  width: 100%;
+  display: flex;
+  height: 150px;
+  font-weight: 700;
+  align-items: center;
+}
+
+footer .video {
+  height: 100%;
+  width: 30%;
+  background-color: var(--footer);
+  color: white;
+}
+
+footer ul {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: white;
+  font-size: 1.125rem;
+  width: 70%;
+  height: 100%;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+footer .explore {
+  width: 30%;
+  height: 100%;
+  color: white;
+  font-size: 1.5rem;
+  background-color: var(--footer);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (max-width: 1100px) {
+  .navigation {
+    padding: 5px;
+  }
+
+  .navigation ul li a {
+    font-size: 0.85rem;
+  }
 }
