--- a/style.css
+++ b/style.css
@@ -61,7 +61,8 @@ a {
   outline: 2px solid black;
 }
 
-.navigation .expandMenu {
+.expandMenu,
+.closeMenu {
   display: none;
 }
 
@@ -169,14 +170,6 @@ footer .explore {
 }
 
 @media (max-width: 1100px) {
-  /*.navigation .menuExpanded {
-    padding: 5px;
-    width: 100vw;
-    height: 100vh;
-    background-color: var(--main-background);
-    position: fixed;
-  } */
-
   .navigation {
     padding: 5px;
     background-color: var(--background);
@@ -184,7 +177,7 @@ footer .explore {
   }
 
   .navigation ul {
-    height: 100%;
+    height: 90%;
     justify-content: space-evenly;
   }
 
@@ -273,5 +266,45 @@ footer .explore {
   footer .explore {
     padding: 20px;
     width: 100%;
+  }
+
+  /* MENU EXPANDIDO */
+
+  body.expandedMenu {
+    overflow: hidden;
+  }
+
+  .navigation.expandedMenu {
+    padding: 5px;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--main-background);
+    position: fixed;
+  }
+
+  .navigation ul.expandedMenu {
+    justify-content: space-evenly;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .navigation ul li:nth-child(2).expandedMenu,
+  .navigation ul li:nth-child(3).expandedMenu,
+  .navigation ul li:nth-child(4).expandedMenu,
+  .navigation ul li:nth-child(5).expandedMenu,
+  .navigation ul li input.expandedMenu {
+    display: block;
+  }
+
+  .navigation .expandMenu.expandedMenu {
+    display: none;
+  }
+
+  .navigation .closeMenu {
+    display: block;
+    cursor: pointer;
+    border: none;
+    background-color: var(--background);
+    margin-left: 85%;
   }
 }
